fix z-index in nav

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,7 +20,6 @@
 #header a.site-title h1 {
   float: right;
   display: inline;
-  font-family: ;
   color: rgba(255,255,255,.7);
   font-weight: lighter;
   margin: 0;
