--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,7 +6,7 @@
   justify-content: center;
   box-sizing: border-box;
   left: 0%;
-  z-index: 10;
+  z-index: 0;
   height: 100%;
   height: 100vh;
   max-height: 100vh;
